--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <script src="script.js"></script>
+
+    <p>Калькулятор</p>
+    <button onclick="calc.get();">Посчитать</button>
+    <p>Калькулятор расхода топлива</p>
+    <button onclick="car.get();">Рассчитать</button>
   </body>
 </html>
