--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <script src="script.js"></script>
 
-    <p>Калькулятор</p>
-    <button onclick="calc.get();">Посчитать</button>
-    <p>Калькулятор расхода топлива</p>
-    <button onclick="car.get();">Рассчитать</button>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Document</title>
+</head>
+
+<body>
+  <script src="script.js"></script>
+
+  <p>Калькулятор</p>
+  <button onclick="calc.get();">Посчитать</button>
+  <p>Калькулятор расхода топлива</p>
+  <button onclick="car.get();">Рассчитать</button>
+  <p>Контакты</p>
+  <button onclick="contact.getName();">Добавить новый контакт</button>
+</body>
+
 </html>
